Alterações para retirada de redundâncias (#1)