@@ -6,6 +6,8 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -57,7 +59,7 @@ public class ProductServiceTests {
 		dependenceId = 4L;
 		category = Factory.createdCategory();
 		product = Factory.createdProduct();
-		page = new PageImpl<>(List.of(product));
+		page = new PageImpl<>(Arrays.asList(product));
 		
 		when(repository.getOne(existId)).thenReturn(product);
 		when(repository.getOne(notExistId)).thenThrow(ResourceNotFoundException.class);
